# Voagel

./: .gitignore  .gitmodules  Dockerfile  README.md  bot.json  bot.toml  compose.yaml  extra_packages.txt  lynn.py  main.py  pyproject.toml  requirements.txt  utils.py
extensions/: ping.py  translate.py
extensions/apis/: classicube.py  howlongtobeat.py  minecraft.py  news.py  ocr.py  statuspage.py  translate.py  weather.py  wolframalpha.py
extensions/core/: admin.py  errors.py
extensions/info/: calc.py  datamine.py  ping.py  rand.py  snowflake.py
extensions/media/: ytdl.py
extensions/mod/: mod.py
voagel/: __init__.py  autocompleters.py  const.py  main.py  utils.py
voagel/extensions/apis/: classicube.py  cve.py  doi.py  howlongtobeat.py  minecraft.py  news.py  ocr.py  statuspage.py  translate.py  weather.py  whisper.py  wolframalpha.py
voagel/extensions/core/: admin.py  errors.py  events.py
voagel/extensions/discord/: emoji.py  mod.py  ping.py  snowflake.py
voagel/extensions/info/: calc.py  datamine.py  ping.py  rand.py
voagel/extensions/media/: ytdl.py
voagel/extensions/mod/: mod.py
voagel/extensions/shadow/: datamine.py
